feat: add stockprice rawdata endpoint
