# docs/swagger.yaml
@@ -47,7 +47,48 @@ definitions:
         description: HTTP Status Code
         type: integer
     type: object
-host: 34.84.203.5:30080
+  models.RawStockPrice:
+    properties:
+      close:
+        description: 株価(終値)
+        type: number
+      date:
+        description: 日付
+        type: string
+      high:
+        description: 株価(高値)
+        type: number
+      low:
+        description: 株価(安値)
+        type: number
+      open:
+        description: 株価(始値)
+        type: number
+      volume:
+        description: 出来高
+        type: number
+    type: object
+  models.RawStockPriceWrapper:
+    properties:
+      companyId:
+        description: システム内で設定する企業毎に一意となるコード
+        type: string
+      companyName:
+        description: 企業名
+        type: string
+      data:
+        description: 株価の時系列データ本体
+        items:
+          $ref: '#/definitions/models.RawStockPrice'
+        type: array
+      stockCode:
+        description: 銘柄コード
+        type: string
+      timestamp:
+        description: クライアントへレスポンスを送信する日時
+        type: string
+    type: object
+host: localhost:30080
 info:
   contact:
     email: datascientist.toolbox.com@gmail.com
@@ -70,19 +111,48 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/models.CompanyWrapper'
-        "400":
-          description: Bad Request
+        "500":
+          description: Internal Server Error
           schema:
             $ref: '#/definitions/models.HTTPError'
-        "404":
-          description: Not Found
+      summary: Dashboardアプリに登録されている企業情報一覧を取得
+      tags:
+      - companies
+  /stockprices/rawdata/{stockCode}:
+    get:
+      description: 指定の企業について、株価の生データ(open/high/low/close/volume)を取得する
+      parameters:
+      - description: 銘柄コード
+        in: path
+        maxLength: 16
+        minLength: 4
+        name: stockCode
+        required: true
+        type: string
+      - description: 株価データ取得の開始日 YYYY-MM-DDの形式で指定
+        in: query
+        name: startDate
+        type: string
+      - description: 株価データ取得の終了日 YYYY-MM-DDの形式で指定
+        in: query
+        name: endDate
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.RawStockPriceWrapper'
+        "400":
+          description: Bad Request
           schema:
             $ref: '#/definitions/models.HTTPError'
         "500":
           description: Internal Server Error
           schema:
             $ref: '#/definitions/models.HTTPError'
-      summary: Dashboardアプリに登録されている企業情報一覧を取得
+      summary: 株価の生データを取得
       tags:
       - companies
 swagger: "2.0"
